--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index",
+    "start": "nodemon app",
     "vercel-build": "echo hello"
   },
   "keywords": [],
