--- a/server/package.json
+++ b/server/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon app",
-    "vercel-build": "echo hello"
+    "start": "nodemon index"
   },
   "keywords": [],
   "author": "",
